topic/kubernetes/infra/prod/infra/rocketmq-ldap/RocketMQ-console-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mq-console
  namespace: infra
spec:
  selector:
    app: mq-console
  ports:
    - name: tcp-80
      port: 80
    - name: tcp-8180
      port: 8180
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mq-console
  namespace: infra
spec:
  serviceName: svc-mq-console
  selector:
    matchLabels:
      app: mq-console
  template:
    metadata:
      labels:
        app: mq-console
    spec:
      containers:
        - name: mq-ldap
          image: pfgc-ops-harbor.gamepind.com/devops/nginx-ldap:v1
          # https://kubernetes.io/docs/concepts/storage/volumes/
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: vol-mq-ldap
              subPath: default.conf
            - mountPath: /etc/nginx/nginx.conf
              name: vol-mq-ldap
              subPath: nginx.conf
          stdin: true
          tty: true
        - name: mq-console
          image: zhanyifan1997/rocketmq-console-ng:latest
          ports:
          - name: mq-console-8180
            containerPort: 8180
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 256M
          startupProbe:
            httpGet:
            tcpSocket:
              port: 8180
            failureThreshold: 30
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: 8180
            timeoutSeconds: 2
          livenessProbe:
            tcpSocket:
              port: 8180
            initialDelaySeconds: 60
            timeoutSeconds: 2
      #nodeSelector:
      #  type: infra
      #imagePullSecrets:
      #  - name: docker-secret
      volumes:
        - name: vol-mq-ldap
          configMap:
            name: cm-mq-console
  replicas: 1
