topic/kubernetes/infra/prod/infra/rocketmq-ldap/RocketMQ-nameserver-sts-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mq-name-a # svc-mq-nameserver-1
  namespace: infra
spec:
  selector:
    app: mq-nameserver-1
  ports:
    - name: tcp-9876
      port: 9876
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mq-nameserver-1
  namespace: infra
  labels:
    app: mq-nameserver-1
spec:
  serviceName: mq-name-a
  selector:
    matchLabels:
      app: mq-nameserver-1
  template:
    metadata:
      labels:
        app: mq-nameserver-1
        appgroup: mq-nameserver
    spec:
      containers:
        - name: mq-nameserver-1
          image: gehuiwin/rocketmq:4.9.2
          imagePullPolicy: IfNotPresent
          command:
          - sh
          - mqnamesrv
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 25m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 9876
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            tcpSocket:
              port: 9876
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
      #nodeSelector:
      #  type: infra
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  appgroup: mq-nameserver
              namespaces:
              - infra
              topologyKey: kubernetes.io/hostname
            weight: 1 

#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: appgroup
#                    operator: In
#                    values:
#                      - mq-nameserver
#              topologyKey: kubernetes.io/hostname
  replicas: 1
  updateStrategy:
    type: RollingUpdate
