topic/kubernetes/infra/prod/infra/rocketmq-ldap/RocketMQ-nameserver-sts-2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mq-name-b
  namespace: infra
spec:
  selector:
    app: mq-nameserver-2
  ports:
    - name: tcp-9876
      port: 9876
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mq-nameserver-2
  namespace: infra
  labels:
    app: mq-nameserver-2
spec:
  serviceName: mq-name-b
  selector:
    matchLabels:
      app: mq-nameserver-2
  template:
    metadata:
      labels:
        app: mq-nameserver-2
        appgroup: mq-nameserver
    spec:
      containers:
        - name: mq-nameserver-2
          image: gehuiwin/rocketmq:4.9.2
          imagePullPolicy: IfNotPresent
          command:
          - sh
          - mqnamesrv
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 25m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 9876
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            tcpSocket:
              port: 9876
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
      # https://kubernetes.io/zh/docs/concepts/scheduling-eviction/assign-pod-node/
#      nodeSelector:
#        type: infra
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  appgroup: mq-nameserver
              namespaces:
              - infra
              topologyKey: kubernetes.io/hostname
            weight: 1
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: appgroup
#                    operator: In
#                    values:
#                      - mq-nameserver
#              topologyKey: kubernetes.io/hostname
  replicas: 1
  updateStrategy:
    type: RollingUpdate
