topic/kubernetes/infra/prod/infra/rocketmq-ldap/RocketMQ-console-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
  #  nginx.ingress.kubernetes.io/auth-type: basic
  #  nginx.ingress.kubernetes.io/auth-secret: rocketmq-auth
  #  # 账号kube-auth  密码：kube-auth2025
  #  nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
  name: ing-mq-console
  namespace: infra
spec:
  ingressClassName: nginx-prod
  rules:
  - host: kubemqui.cici.com
    http:
      paths:
      - backend:
          service:
            name: svc-mq-console
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
